css/components/card-activity.css
.activity-tracker__activity {
  background-color: var(--color-navy-900);
  border-radius: 0.9375rem;
  overflow: hidden;
  min-height: 160px;
  position: relative;
  display: grid;
  grid-template-rows: 38px 1fr;
}

.activity-tracker__activity.work {
  background-color: var(--color-orange-300);
}

.activity-tracker__activity.play {
  background-color: var(--color-blue-300);
}

.activity-tracker__activity.study {
  background-color: var(--color-pink-400);
}

.activity-tracker__activity.exercise {
  background-color: var(--color-green-400);
}

.activity-tracker__activity.social {
  background-color: var(--color-purple-700);
}

.activity-tracker__activity.self-care {
  background-color: var(--color-yellow-300);
}

.activity__bg img {
  position: absolute;
  left: 231.58px;
  top: -10.91px;
  z-index: 1;
}

.activity__info {
  background-color: var(--color-navy-900);
  border-radius: 0.9375rem 0.9375rem 0 0;
  padding: var(--spacing-300);
  z-index: 2;
  min-height: 122px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: var(--spacing-100);
  cursor: pointer;
  transition: 0.3s ease;
}

.activity__info:hover {
  background-color: var(--color-navy-800);
}

.activity__header,
.activity__timeframes {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.activity__name {
  font-size: var(--text-preset-5);
  font-weight: var(--font-weight-medium);
  color: var(--color-white);
}

.activity__options {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s ease;
  cursor: pointer;
}

.activity__options:hover {
  filter: brightness(0) invert(1);
}

.activity__current-timeframe {
  font-size: var(--text-preset-3);
  font-weight: var(--font-weight-light);
  color: var(--color-white);
}

.activity__previous-timeframe {
  font-size: var(--text-preset-6);
  display: flex;
  gap: 0.25rem;
  color: var(--color-navy-200);
}

@media screen and (min-width: 768px) {
  .activity-tracker__activity {
    max-height: 213px;
    grid-template-rows: 33px 1fr;
  }

  .activity-tracker__activity.work .activity__bg,
  .activity__info {
    max-width: 188px;
  }

  .activity__bg img {
    width: 57.48px;
    height: 57.48px;
    left: 117.61px;
    top: -8.04px;
  }

  .activity__info {
    max-height: 180px;
    gap: var(--spacing-200);
  }

  .activity__timeframes {
    flex-wrap: wrap;
    gap: var(--spacing-100);
  }

  .activity__current-timeframe {
    font-size: var(--text-preset-1);
  }
}

@media screen and (min-width: 1200px) {
  .activity-tracker__activity {
    max-height: 244px;
    grid-template-rows: 45px 1fr;
  }

  .activity__bg img {
    width: 78px;
    height: 78px;
    left: 159.58px;
    top: -10.91px;
  }

  .activity__info {
    max-height: 199px;
    padding: var(--spacing-300);
  }
}

